# gtsam_catkin

./: CMakeLists.txt  README.md  package.xml  use_catkinized_metis.patch
install/: gtsam.rosinstall
