<?xml version="1.0"?>
<package format="2">
  <name>gtsam_catkin</name>
  <version>4.0.0</version>
  <description>gtsam_catkin</description>

  <author email="paul.furgale@mavt.ethz.ch">Paul Furgale</author>
  <maintainer email="matias@robots.ox.ac.uk">Matias Mattamala</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <!-- <depend>eigen_catkin</depend>
  <depend>metis_catkin</depend> -->
</package>

